packages/styles/src/components/dialog.scss
@use 'sass:list';

@use '../mixins/utilities' as utilities-mx;
@use '../variables/spacing';
@use '../variables/color';
@use '../variables/animation';
@use '../variables/elevation';

@use '../functions/tokens';
@use '../tokens/utilities';
@use '../mixins/media';
@use '../mixins/color-scheme';

tokens.$default-map: utilities.$post-spacing;

$dialog-types: 'info', 'error', 'success', 'warning';
$border-radius: 0.5rem;

.post-dialog,
// deprecated
dialog {
  box-shadow: elevation.$elevation-500;
  padding: 0;
  min-width: min(389px, 90vw);
  max-width: 590px;
  max-height: 90vh;
  overflow: visible;
  margin: revert;
  overscroll-behavior: contain;
  background-color: #fafafa;
  border: 2px #cdccc8;
  border-radius: $border-radius;

  &::backdrop {
    background-color: rgba(#050400, 0.8);
    backdrop-filter: blur(0);
  }

  @include utilities-mx.high-contrast-mode {
    // Show the border in HCM
    border-width: 2px;

    // Mark the backdrop as inactive in HCM
    &::backdrop {
      background-image: linear-gradient(
        135deg,
        CanvasText 4.55%,
        transparent 4.55%,
        transparent 50%,
        CanvasText 50%,
        CanvasText 54.55%,
        transparent 54.55%,
        transparent 100%
      );
      background-size: 22px 22px;
      backdrop-filter: none;
      background-color: transparent;
      forced-color-adjust: none;
    }
  }

  // Sizes
  // [small, medium (default), large]
  &[data-size='small'] {
    min-width: 296px;
    max-width: 388px;
  }

  &[data-size='large'] {
    min-width: min(600px, 90vw);
    max-width: 792px;
  }

  // Positioning
  // [top, center (default), bottom]
  &[data-position='top'] {
    top: 2rem;
    bottom: auto;
  }

  &[data-position='bottom'] {
    top: auto;
    bottom: 2rem;
  }

  > .dialog-grid {
    padding: tokens.get('utility-gap-16') tokens.get('utility-gap-16') 0;
    border-radius: $border-radius;
    display: grid;
    grid-template-rows: auto 1fr auto;
    max-height: 90vh;
    column-gap: tokens.get('utility-gap-16');
    grid-template-columns: auto 1fr;
    grid-template-areas:
      'icon header'
      'icon body'
      'controls controls';

    // Propagate bg color to the controls
    background-color: inherit;

    &:not(:has(.dialog-controls)) {
      padding-bottom: tokens.get('utility-gap-16');
    }
  }
}

:where(.dialog-icon, .dialog-header, .dialog-body, .dialog-controls):empty {
  display: none;
}

.dialog-grid {
  $typed-dialog-children: ();
  @each $type in $dialog-types {
    $selector: 'dialog[data-type="#{$type}"] > *';
    $typed-dialog-children: list.append($typed-dialog-children, $selector, $separator: comma);

    &:where(#{$selector})::before {
      background-image: var(--post-signal-icon-#{$type});
    }
  }

  &:where(#{$typed-dialog-children})::before {
    content: '';
    display: block;
    grid-area: icon;

    width: tokens.get('utility-gap-40');
    height: tokens.get('utility-gap-40');
  }

  .dialog-header {
    grid-area: header;
    margin-top: 0;
    position: sticky;
  }

  .dialog-body {
    grid-area: body;
    margin-bottom: 0;
    overflow: auto;

    > *:last-child {
      margin-bottom: 0;
    }
  }

  &:not(:where(#{$typed-dialog-children})) {
    .dialog-header {
      grid-area: 1 / icon / 1 / header;
    }

    .dialog-body {
      grid-area: 2 / icon / 2 / body;
    }
  }
}

.dialog-controls {
  grid-area: controls;
  position: sticky;
  bottom: 0;
  padding-top: tokens.get('utility-gap-16');
  padding-bottom: tokens.get('utility-gap-16');
  margin-block-end: 0;
  display: flex;
  flex-wrap: wrap;
  flex-direction: row-reverse;
  gap: tokens.get('utility-gap-8');
  background-color: inherit;

  button {
    @include media.max(sm) {
      width: 100%;
    }
  }
}

// Animations
// [slide-in, pop-in, none]
// Progressively enhanced with currently experimental @starting-style which allows to animate stuff appearing in the top layer
// https://developer.mozilla.org/en-US/docs/Web/CSS/@starting-style
.post-dialog:not([data-animation='none']),
// deprecated
dialog:not([data-animation='none']) {
  --_dialog-transition-duration: var(--dialog-transition-duration, 0.5s);

  transform: scale(0.8);
  opacity: 0;
  transition-property: transform, opacity, overlay, display;
  transition-behavior: allow-discrete;
  transition-duration: var(--_dialog-transition-duration);
  transition-timing-function: linear(
    0,
    0.007,
    0.029 2.2%,
    0.118 4.7%,
    0.625 14.4%,
    0.826 19%,
    0.902,
    0.962,
    1.008 26.1%,
    1.041 28.7%,
    1.064 32.1%,
    1.07 36%,
    1.061 40.5%,
    1.015 53.4%,
    0.999 61.6%,
    0.995 71.2%,
    1
  );

  &::backdrop {
    opacity: 0;
    transition:
      backdrop-filter var(--_dialog-transition-duration),
      opacity var(--_dialog-transition-duration),
      overlay var(--_dialog-transition-duration) allow-discrete,
      display var(--_dialog-transition-duration) allow-discrete;
  }

  &[open] {
    transform: scale(1);
    opacity: 1;

    @starting-style {
      opacity: 0;
      transform: scale(0.8);
    }

    &::backdrop {
      opacity: 1;
      backdrop-filter: blur(10px);

      @starting-style {
        opacity: 0;
        backdrop-filter: blur(0);
      }

      @media (forced-colors: active) {
        backdrop-filter: none;
      }
    }
  }

  &[data-animation='slide-in'] {
    transform: translateY(calc(var(--_dialog-slide-in-offset)));

    &[data-position='top'] {
      --_dialog-slide-in-offset: -3rem;
    }

    &[data-position='bottom'] {
      --_dialog-slide-in-offset: 3rem;
    }

    &[open] {
      transform: translateY(0);

      @starting-style {
        transform: translateY(calc(var(--_dialog-slide-in-offset)));
      }
    }
  }
}

